layout cadastro terminado // lógica de inserção de dados no gráfico melhorada

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -39,7 +39,7 @@
                             <h3>Violão</h3>
                         </span>
                         <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
+                            <img src="assets/imgsSignCards/guitarCard.png" alt="">
                         </span>
                     </span>
                 </label>
@@ -52,14 +52,95 @@
                             <h3>Violino</h3>
                         </span>
                         <span class="imgOfInstruments">
-                            <img src="assets/imgs/guitar.png" alt="">
+                            <img src="assets/imgsSignCards/violinCard.png" alt="">
                         </span>
                     </span>
                 </label>
-            </div>
-
-            <div class="yourLevel">
-
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="3"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Piano</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/pianoCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="4"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Bateria</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/bateriaCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="5"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Guitarra</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/guitarra-eletricaCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="6"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Flauta</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/flautaCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="7"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Baixo</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/baixoCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="8"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Banjo</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/banjoCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                <label class="cardYourInstruments">
+                    <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="9"
+                        type="radio" >
+                    <span class="contentCardYourInstruments">
+                        <span class="nameOfInstruments">
+                            <h3>Saxofone</h3>
+                        </span>
+                        <span class="imgOfInstruments">
+                            <img src="assets/imgsSignCards/saxofoneCard.png" alt="">
+                        </span>
+                    </span>
+                </label>
+                
             </div>
         </div>
 
