alterações de conteudo

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
                         <a href="">
                             <li>Simulador</li>
                         </a>
-                        <a href="">
+                        <a href="login.html">
                             <li>DashBoard</li>
                         </a>
-                        <a href="">
+                        <!-- <a href="">
                             <li>Ferramentas</li>
-                        </a>
+                        </a> -->
                         <a href="login.html">
                             <li>Login</li>
                         </a>
@@ -53,13 +53,13 @@
 
         <div class="contentSlogan">
             <h1>Fazer musica é <br>sim para todos.</h1>
-            <p>Um lugar onde você pode conhecer um <br>pouco do universo imenso da musica.</p>
+            <p>Um lugar onde você pode conhecer um <br>pouco do imenso universo da musica.</p>
             <h3>
                 Vá em frente e se divirta.
             </h3>
 
             <div class="buttons">
-                <button class="btnGradient">Quiz</button>
+                <button class="btnGradient">Comunidade</button>
                 <button class="btnSimulador"><img src="assets/imgs/Polygon 1.png" alt=""> Simulador</button>
             </div>
         </div>
