--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -71,20 +71,20 @@
     <div class="ItensCardRight">
         <h3>Fundamentos da teoria musical</h3>
         <p>Aprenda os fundamentos para entender de fato o mundo da musica</p>
-        <button class="btnBanner btnGoCommunity btnCourses"><img src="../assets/imgsDash/right-arrow.png"
-                alt=""></button>
+        <button class="btnBanner btnGoCommunity btnCourses"><a href="https://www.youtube.com/watch?v=GJC9zdMG1UQ"target="_blank"><img src="../assets/imgsDash/right-arrow.png"
+                alt=""></a></button>
     </div>
     <div class="ItensCardRight">
         <h3>Exercícios para melhor no violão</h3>
         <p>Exercícios para melhora da técnica e confiança no violão.</p>
-        <button class="btnBanner btnGoCommunity btnCourses"><img src="../assets/imgsDash/right-arrow.png"
-                alt=""></button>
+        <button class="btnBanner btnGoCommunity btnCourses"><a href="https://www.youtube.com/watch?v=o6J59n78few"target="_blank"> <img src="../assets/imgsDash/right-arrow.png"
+                alt=""></a></button>
     </div>
     <div class="ItensCardRight">
         <h3>Aprenda a trocar as cordas do seu violão</h3>
         <p>não passe mais aperto e troque você mesmo.</p>
-        <button class="btnBanner btnGoCommunity btnCourses"><img src="../assets/imgsDash/right-arrow.png"
-                alt=""></button>
+        <button class="btnBanner btnGoCommunity btnCourses"><a href="https://www.youtube.com/watch?v=YSDJvnkIknA" target="_blank"><img src="../assets/imgsDash/right-arrow.png"
+                alt=""></a></button>
     </div>
 </div>
 </body>
