--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,8 @@
             <div class="divCardTools cardChord">
                 <h2>Chat</h2>
                 <p>Compartilhe ideias, duvidas ou sua experiência com instrumentistas e aspirantes de todo o Brasil </p>
-                <a class="buttonCardTools" href="login.html"><img src="assets/imgs/VectorForCardBenefits.png" alt=""></a>
+                <a class="buttonCardTools" href="login.html"><img src="assets/imgs/VectorForCardBenefits.png"
+                        alt=""></a>
             </div>
 
             <div class="guitar"><img src="assets/imgs/guitar.png" alt=""></div>
@@ -144,7 +145,8 @@
             <div class="divCardTools cardSimulator">
                 <h2>Simulador</h2>
                 <p>Experimente alguns de nossos simuladores de instrumentos</p>
-                <a class="buttonCardTools" href="login.html"><img src="assets/imgs/VectorForCardBenefits.png" alt=""></a>
+                <a class="buttonCardTools" href="login.html"><img src="assets/imgs/VectorForCardBenefits.png"
+                        alt=""></a>
             </div>
         </div>
         <div class="divCardTools cardQuiz">
@@ -163,8 +165,8 @@
     // document.getElementById("mymusic").addEventListener("mouseenter",function(link){
     //     console.log("teste")
     // })
-    function openLink(link){
-        return window.open(link ,"_blank")
+    function openLink(link) {
+        return window.open(link, "_blank")
     }
     function open1() {
         openLink(`https://www.youtube.com/watch?v=8JUhqc2Z838`)
@@ -182,5 +184,5 @@
     function open5() {
         openLink(`https://www.youtube.com/watch?v=Ou8zCdy49LE`)
     }
-    
+
 </script>
