--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -41,7 +41,7 @@
             <div class="divImgBanner">
                 <h2>Experimente Nosso Simulador</h2>
                 <p>Um Simulador para você experimentar como é ser um violonista.</p>
-                <button class="btnBanner"><img src="../assets/imgsDash/right-arrow.png" alt=""></button>
+                <button class="btnBanner"><a href="piano.instruments.html"><img src="../assets/imgsDash/right-arrow.png" alt=""></a></button>
             </div>
             <div class="divGoCommunity">
                 <div class="divContentGoCommunity">
