mais algumas alterações no piano

--- a/public/dashboard/piano.instruments.html
+++ b/public/dashboard/piano.instruments.html
@@ -32,6 +32,7 @@
 
     <div class="divTitleOfInstrument">
         Piano
+        <div id="divLogsOfInstrument1" class="divLogsOfInstrument"></div>
     </div>
     <div class="contentPian">
         <div class="divPian">
